// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`spatialNavigationAction renders 0 1`] = `
Array [
  .c0 {
  spatial-navigation-action: 0;
}

<div
    className="c0"
  />,
  .c0 {
  spatial-navigation-action: 0;
}

<div
    className="c0"
  />,
  .c0 {
  spatial-navigation-action: 0;
}

<div
    className="c0"
  />,
  .c0 {
  spatial-navigation-action: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`spatialNavigationAction renders function 1`] = `
Array [
  .c0 {
  spatial-navigation-action: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  spatial-navigation-action: has;
}

<div
    className="c0"
  />,
  .c0 {
  spatial-navigation-action: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  spatial-navigation-action: has;
}

<div
    className="c0"
  />,
]
`;

exports[`spatialNavigationAction renders invalid theme path 1`] = `
Array [
  .c0 {
  spatial-navigation-action: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  spatial-navigation-action: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  spatial-navigation-action: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  spatial-navigation-action: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`spatialNavigationAction renders negative number 1`] = `
Array [
  .c0 {
  spatial-navigation-action: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  spatial-navigation-action: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  spatial-navigation-action: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  spatial-navigation-action: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`spatialNavigationAction renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  spatial-navigation-action: July;
}

@media screen and (min-width:November) {
  .c0 {
    spatial-navigation-action: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    spatial-navigation-action: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    spatial-navigation-action: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    spatial-navigation-action: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  spatial-navigation-action: July;
}

@media screen and (min-width:November) {
  .c0 {
    spatial-navigation-action: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    spatial-navigation-action: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    spatial-navigation-action: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    spatial-navigation-action: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  spatial-navigation-action: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    spatial-navigation-action: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    spatial-navigation-action: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    spatial-navigation-action: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    spatial-navigation-action: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  spatial-navigation-action: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    spatial-navigation-action: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    spatial-navigation-action: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    spatial-navigation-action: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    spatial-navigation-action: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`spatialNavigationAction renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    spatial-navigation-action: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    spatial-navigation-action: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    spatial-navigation-action: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    spatial-navigation-action: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    spatial-navigation-action: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    spatial-navigation-action: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    spatial-navigation-action: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    spatial-navigation-action: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    spatial-navigation-action: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    spatial-navigation-action: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    spatial-navigation-action: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    spatial-navigation-action: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    spatial-navigation-action: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    spatial-navigation-action: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    spatial-navigation-action: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    spatial-navigation-action: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`spatialNavigationAction renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  spatial-navigation-action: July;
}

@media May {
  .c0 {
    spatial-navigation-action: August;
  }
}

@media April {
  .c0 {
    spatial-navigation-action: September;
  }
}

@media January {
  .c0 {
    spatial-navigation-action: November;
  }
}

@media April {
  .c0 {
    spatial-navigation-action: August;
  }
}

@media June {
  .c0 {
    spatial-navigation-action: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  spatial-navigation-action: July;
}

@media May {
  .c0 {
    spatial-navigation-action: August;
  }
}

@media April {
  .c0 {
    spatial-navigation-action: September;
  }
}

@media January {
  .c0 {
    spatial-navigation-action: November;
  }
}

@media April {
  .c0 {
    spatial-navigation-action: August;
  }
}

@media June {
  .c0 {
    spatial-navigation-action: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  spatial-navigation-action: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    spatial-navigation-action: November;
  }
}

@media April {
  .c0 {
    spatial-navigation-action: January;
  }
}

@media January {
  .c0 {
    spatial-navigation-action: December;
  }
}

@media April {
  .c0 {
    spatial-navigation-action: April;
  }
}

@media June {
  .c0 {
    spatial-navigation-action: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  spatial-navigation-action: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    spatial-navigation-action: November;
  }
}

@media April {
  .c0 {
    spatial-navigation-action: January;
  }
}

@media January {
  .c0 {
    spatial-navigation-action: December;
  }
}

@media April {
  .c0 {
    spatial-navigation-action: April;
  }
}

@media June {
  .c0 {
    spatial-navigation-action: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`spatialNavigationAction renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    spatial-navigation-action: July;
  }
}

@media April {
  .c0 {
    spatial-navigation-action: August;
  }
}

@media January {
  .c0 {
    spatial-navigation-action: September;
  }
}

@media April {
  .c0 {
    spatial-navigation-action: November;
  }
}

@media June {
  .c0 {
    spatial-navigation-action: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    spatial-navigation-action: July;
  }
}

@media April {
  .c0 {
    spatial-navigation-action: August;
  }
}

@media January {
  .c0 {
    spatial-navigation-action: September;
  }
}

@media April {
  .c0 {
    spatial-navigation-action: November;
  }
}

@media June {
  .c0 {
    spatial-navigation-action: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    spatial-navigation-action: January;
  }
}

@media April {
  .c0 {
    spatial-navigation-action: December;
  }
}

@media January {
  .c0 {
    spatial-navigation-action: April;
  }
}

@media April {
  .c0 {
    spatial-navigation-action: May;
  }
}

@media June {
  .c0 {
    spatial-navigation-action: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    spatial-navigation-action: January;
  }
}

@media April {
  .c0 {
    spatial-navigation-action: December;
  }
}

@media January {
  .c0 {
    spatial-navigation-action: April;
  }
}

@media April {
  .c0 {
    spatial-navigation-action: May;
  }
}

@media June {
  .c0 {
    spatial-navigation-action: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`spatialNavigationAction renders postitive number 1`] = `
Array [
  .c0 {
  spatial-navigation-action: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  spatial-navigation-action: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  spatial-navigation-action: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  spatial-navigation-action: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`spatialNavigationAction renders string 1`] = `
Array [
  .c0 {
  spatial-navigation-action: July;
}

<div
    className="c0"
  />,
  .c0 {
  spatial-navigation-action: July;
}

<div
    className="c0"
  />,
  .c0 {
  spatial-navigation-action: June;
}

<div
    className="c0"
  />,
  .c0 {
  spatial-navigation-action: June;
}

<div
    className="c0"
  />,
]
`;

exports[`spatialNavigationAction renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`spatialNavigationAction renders valid theme path 1`] = `
Array [
  .c0 {
  spatial-navigation-action: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  spatial-navigation-action: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  spatial-navigation-action: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  spatial-navigation-action: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
